--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,20 @@
 
 /* Global */
 :root {
-  --c-black: #171717;
-  --c-white: #f8f8f8;
+  --c-black: #0b1114;
+  --c-white: #ffffff;
+
   --c-dark-grey: #494949;
   --c-medium-grey: #939292;
   --c-light-grey: #e7e6e6;
+
+  --c-bg-gradient: linear-gradient(45deg, #0b1114, #131d21);
+
+  --c-bg-form: #efac00;
+  --c-bg-label: #da9d00;
+  --c-bg-input: #ffb800;
+
   --c-pink: #ff5d73;
-  --c-pink-gradient: linear-gradient(45deg, #ff5d73, #fe5196);
   --header-height: 3rem;
   --footer-height: calc(
     1.5rem + 1.5rem + 0.8rem
@@ -25,9 +32,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  background: var(--c-white);
-  color: var(--c-black);
-  display: grid;
+  background: var(--c-bg-gradient);
 }
 
 h1,
@@ -38,6 +43,160 @@ h4 {
   font-weight: 900;
 }
 /* -------------------------------------------------------------------------- */
-/* Form */
+/* General */
+.main {
+  background: var(--c-bg-form);
+  max-width: 568px;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+}
 
+.header {
+  /* margin: 1.5rem 0; */
+}
+
+.header__title {
+  font-size: 2.8rem;
+  letter-spacing: 0.08rem;
+  color: var(--c-white);
+  text-align: center;
+}
+/* -------------------------------------------------------------------------- */
+/* Form */
+.form {
+  width: 100%;
+  padding: 1rem 1.2rem;
+}
+
+.form__fields {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0;
+}
+
+.form__fields--inline {
+  flex-direction: row;
+  align-items: center;
+}
+
+.form__label {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
+  font-style: italic;
+  white-space: nowrap;
+  color: var(--c-white);
+  padding: 0 1.2rem;
+  display: block;
+  width: 100%;
+  line-height: 1.5rem;
+  position: relative;
+  background: var(--c-bg-label);
+}
+
+.form__label::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 0;
+  bottom: 0;
+  border-left: 1rem solid var(--c-bg-form);
+  border-bottom: 1.5rem solid transparent;
+}
+
+.form__label::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: 0;
+  bottom: 0;
+  border-right: 1rem solid var(--c-bg-form);
+  border-top: 1.5rem solid transparent;
+}
+
+.form__input {
+  font-size: 0.8rem;
+  color: var(--c-black);
+  padding: 0 1.2rem;
+  background: var(--c-bg-input);
+  border: 0;
+  line-height: 1.5rem;
+  width: calc(100% - 1rem);
+}
+
+.form__input::placeholder {
+  font-style: italic;
+  color: rgba(var(--c-black), 0.5);
+}
+
+.form__input--range {
+  width: 60%;
+  display: block;
+  margin: 0 auto;
+  padding: 1rem 1.5rem;
+}
+
+.form__input--textarea {
+  resize: none;
+}
+
+.form__checkbox {
+  -webkit-appearance: none;
+  background-color: var(--c-bg-input);
+  border: 1px solid var(--c-bg-label);
+  padding: 0.6rem;
+  border-radius: 0.3rem;
+  display: inline-block;
+  position: relative;
+}
+
+.form__checkbox-label {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
+  color: var(--c-black);
+  padding: 0 1.2rem;
+
+  white-space: nowrap;
+  color: var(--c-black);
+  display: block;
+}
+
+.form__fields input[type="file"],
+.form__fields input[type="file"]::-webkit-file-upload-button {
+  visibility: hidden;
+  /* opacity: 0.7; */
+}
+
+.form__fields input[type="file"]::before {
+  content: "Select a file";
+  display: inline-block;
+  background: var(--c-bg-black);
+  color: var(--c-white);
+  border: 1px solid hotpink;
+  padding: 5px 8px;
+  outline: none;
+  white-space: nowrap;
+  -webkit-user-select: none;
+
+  cursor: pointer;
+}
+
+.form__button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 0.8rem;
+  align-self: center;
+  display: inline-block;
+  background: var(--c-black);
+  color: var(--c-white);
+  padding: 0.5rem 0.75rem;
+  cursor: pointer;
+  border: none;
+}
 /* -------------------------------------------------------------------------- */
